library-plus/common-service-email.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biop-k8s-common-service-email
  namespace: it-ar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biop-k8s-common-service-email
      version: v1
  template:
    metadata:
      labels:
        app: biop-k8s-common-service-email
        version: v1
        apptype: api
      annotations:
        annotations-key: annotation-value
    spec:
      containers:
        - name: biop-k8s-common-service-email
          image: "340752819914.dkr.ecr.eu-central-1.amazonaws.com/it_ar_k8s/biop-k8s-common-service-email:latest"
          imagePullPolicy: Always
          ports:
            - name: service
              containerPort: 8001
              protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: biop-k8s-common-service-email
  namespace: it-ar
spec:
  type: ClusterIP
  selector:
    app: biop-k8s-common-service-email
  ports:
    - name: http
      port: 80
      targetPort: 8001
