library-plus/kkfile-view.yml
---
apiVersion: v1
kind: Service
metadata:
 name: kkfileview-dev
 namespace: it-ar
 labels:
   service: kkfileview-dev
spec:
 type: ClusterIP
 selector:
   app: kkfileview-dev
 ports:
   - port: 8012
     name: http
     targetPort: 8012
