library-plus/neo4j-all.yml
---
apiVersion: v1
kind: Service
metadata:
 name: neo4j-db-1
 namespace: it-ar
 annotations:
  service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
  service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
  service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  service.beta.kubernetes.io/aws-load-balancer-internal: "true"
  service.beta.kubernetes.io/aws-load-balancer-attributes: |

      load_balancing.cross_zone.enabled=true
 labels:
  service: neo4j-db-1
spec:
 type: LoadBalancer

 selector:
   app: neo4j-db
 ports:
   - port: 7474
     name: http
     targetPort: 7474
   - port: 7473
     name: https
     targetPort: 7473
   - port: 7687
     name: bolt
     targetPort: 7687
---
---
apiVersion: v1
kind: Service
metadata:
 name: neo4j-db-2
 namespace: it-ar
 labels:
   service: neo4j-db-2
spec:
 type: ClusterIP
 selector:
   app: neo4j-db
 ports:
   - port: 7474
     name: http
     targetPort: 7474
   - port: 7473
     name: https
     targetPort: 7473
   - port: 7687
     name: bolt
     targetPort: 7687
