library-plus/neo4j-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
 name: neo4j-dev-db
 namespace: it-ar
 annotations:
  service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  service.beta.kubernetes.io/aws-load-balancer-internal: "true"
  service.beta.kubernetes.io/aws-load-balancer-security-groups: "sg-05d687c8908d3bce9"

#  service.beta.kubernetes.io/aws-load-balancer-attributes: |

#      load_balancing.cross_zone.enabled=true

 labels:
  service: neo4j-dev-db
spec:
 type: LoadBalancer
 selector:
   app: neo4j-db
 ports:
   - port: 7474
     name: http
     targetPort: 7474
   - port: 7473
     name: https
     targetPort: 7473
   - port: 7687
     name: bolt
     targetPort: 7687
